--- a/settings.py.template
+++ b/settings.py.template
@@ -44,12 +44,16 @@ USE_I18N = True
 USE_L10N = True
 
 # Absolute filesystem path to the directory that will hold user-uploaded files.
-# Example: "/home/media/media.lawrence.com/"
+# This will probably be a sub-directory of STATIC_ROOT.
+# Example: "/home/media/media.lawrence.com/",
+# "/home/hamtech/dev.rtoham.com/public/media"
 MEDIA_ROOT = ''
 
 # URL that handles the media served from MEDIA_ROOT. Make sure to use a
 # trailing slash if there is a path component (optional in other cases).
-# Examples: "http://media.lawrence.com", "http://example.com/media/"
+# This will probably be a sub-directory of STATIC_URL.
+# Examples: "http://media.lawrence.com", "http://example.com/media/",
+# "/static/media/"
 MEDIA_URL = ''
 
 # URL prefix for admin media -- CSS, JavaScript and images. Make sure to use a
@@ -96,3 +100,11 @@ INSTALLED_APPS = (
     # Uncomment the next line to enable admin documentation:
     # 'django.contrib.admindocs',
 )
+
+# Static file configuration.
+# STATIC_ROOT is the absolute file path to the static files on the server.
+# E.g. '/home/hamtech/dev.rtoham.com/public/static/'
+STATIC_ROOT = ''
+# STATIC_URL is the URL that the static files will be served from.
+# E.g. '/static/'
+STATIC_URL = ''
